verif/test/deca/context/invalid/assign/multi-type-errors-verif.res
src/test/deca/context/invalid/assign/multi-type-errors.deca:10:4: The type 'UnknownType' is not defined in the environment of types
